--- a/astro/PlecoAnalyzer.astro
+++ b/astro/PlecoAnalyzer.astro
@@ -142,7 +142,7 @@ const {
     computeSpectralCentroid,
     computeRMS,
     LoopPlayer 
-  } from '../src/index.js';
+  } from 'pleco-xa/src/index.js';
 
   let currentPlayer = null;
 
