refactor(astro): use package exports

--- a/astro/WaveformEditor.astro
+++ b/astro/WaveformEditor.astro
@@ -112,7 +112,7 @@ const {
 </style>
 
 <script>
-  import { librosaLoopAnalysis, WaveformEditor, LoopPlayer } from 'pleco-xa/src/index.js';
+  import { librosaLoopAnalysis, WaveformEditor, LoopPlayer } from 'pleco-xa';
 
   let editor = null;
   let player = null;
