--- a/astro/PlecoAnalyzer.astro
+++ b/astro/PlecoAnalyzer.astro
@@ -136,13 +136,13 @@ const {
 </style>
 
 <script>
-  import { 
-    detectBPM, 
-    librosaLoopAnalysis, 
+  import {
+    detectBPM,
+    librosaLoopAnalysis,
     computeSpectralCentroid,
     computeRMS,
-    LoopPlayer 
-  } from 'pleco-xa/src/index.js';
+    LoopPlayer
+  } from 'pleco-xa';
 
   let currentPlayer = null;
 
