Update LoopPlayer import

--- a/astro/LoopPlayer.astro
+++ b/astro/LoopPlayer.astro
@@ -71,7 +71,7 @@ const {
 </style>
 
 <script>
-  import { LoopPlayer } from '../src/index.js';
+  import { LoopPlayer } from 'pleco-xa';
 
   let player = null;
 
