--- a/examples/astro-doppler/src/pages/index.astro
+++ b/examples/astro-doppler/src/pages/index.astro
@@ -32,7 +32,7 @@
     <section id="page3"><h1>Loop 2</h1></section>
 
     <script type="module">
-      import { librosaLoopAnalysis } from '../../../../src/index.js';
+      import { librosaLoopAnalysis } from 'pleco-xa';
 
       const ctx = new (window.AudioContext || window.webkitAudioContext)();
 
