--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -367,6 +367,6 @@ description: "Browser-native audio analysis library for intelligent loop detecti
 
   <div id="errorDisplay"></div>
 
-  <script type="module" src="src/utils/audio-analysis.js"></script>
+  <script type="module" src="/js/audio-analysis.js"></script>
 
  </script>
