--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -370,6 +370,6 @@ const description = "Browser-native audio analysis library for intelligent loop 
 
   <div id="errorDisplay"></div>
 
-  <script type="module" src="/js/audio-analysis.js"></script>
+  <script src="/js/audio-analysis.js" defer></script>
 
  </script>
