--- a/src/pages/loop-player.astro
+++ b/src/pages/loop-player.astro
@@ -192,7 +192,7 @@ const description = "Play and manipulate audio loops with Pleco-XA's advanced to
 
 <div id="errorDisplay"></div>
 
-<script type="module" src="/js/audio-analysis.js"></script>
+<script src="/js/audio-analysis.js" defer></script>
 
 <script>
   // Assuming LoopPlayer is exposed globally or through a loaded module from audio-analysis.js
